--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
   <div class="container">
+
   <div class="wrapper">
       <div class="box">
           <div class="row">
             <!-- sidebar -->
                 <div class="column col-sm-3" id="sidebar">
+                  <div class="sidebar-background">
                     <a class="logo" href="#">B</a>
                     <ul class="nav">
                         <li class="active"><a href="#featured">Featured</a>
@@ -20,9 +23,31 @@
                         <li><a href="#stories">Stories</a>
                         </li>
                     </ul>
+                  </div>
                 </div>
                 <!-- /sidebar -->
+                <!-- main -->
+                <div class="column col-sm-9" id="main">
+                    <div class="padding">
+                        <div class="full col-sm-9">
+                            <ul class="nav nav-pills">
+                              <% if current_user %>
+                              Logged in as <%= current_user.username %>
+                                <li class="pull-right"><%= link_to "Sign Out", destroy_user_session_path %></li>
+                                <% else %>
+                              <li class="pull-right"><%= link_to "Create Account", new_user_registration_path %></li>
+                              <li class="pull-right"><%= link_to "Sign In", new_user_session_path %></li>
+                              <% end %>
+                            </ul>
+
                   <%= yield %>
+
+
+                        </div><!-- /col-9 -->
+                    </div><!-- /padding -->
+                </div>
+                <!-- /main -->
+
           </div>
       </div>
   </div>
