--- a/app/assets/stylesheets/custom2.css
+++ b/app/assets/stylesheets/custom2.css
@@ -1,23 +1,24 @@
-#sidebar{
-  background-color: blue;
-  float:left;
-  width: 20%;
-  background:url(background.jpg);
-  opacity:0.7;
+
+.container{
+  background:url(background2.jpg) no-repeat center center;
+  height:900px;
 }
-#main{
-  background:url(gray_sand.png);
-  background-repeat:repeat;
-  border:2px solid #4C7F40;
-  border-radius:5px;
-}
-.sidebar-background{
-  background:url(background.jpg);
-  opacity:0.5;
-}
+
 h1{
-  color:#4C7F40;
+  color:white;
 }
-ul .nav{
-  margin:0px 0px 0px 0px;
+.row{
+  background:white;
+  border-radius:5px;
+  margin:20px 20px;
+  padding:20px 20px;
+  opacity:0.8;
+}
+
+.logged-in{
+  color:white;
+}
+
+.header{
+
 }
