--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,60 +1,8 @@
 
-<h1>Welcome</h1>
-            <!-- content -->
+<h1>Sports Hub</h1>
 
-            <div class="col-sm-12" id="featured">
-              <div class="page-header text-muted">
-              Featured
-              </div>
-            </div>
+<h4>Bloggers</h4>
 
-            <!--/top story-->
-            <div class="row">
-              <div class="col-sm-10">
-                <h3>This is Some Awesome Featured Content</h3>
-                <h4><span class="label label-default">techvisually.com</span></h4><h4>
-                <small class="text-muted">1 hour ago • <a href="#" class="text-muted">Read More</a></small>
-                </h4>
-              </div>
-              <div class="col-sm-2">
-                <a href="#" class="pull-right"><img src="/assets/example/bg_sailboat.jpg" class="img-circle"></a>
-              </div>
-            </div>
-
-            <div class="col-sm-12" id="stories">
-              <div class="page-header text-muted divider">
-                Top Stories
-              </div>
-            </div>
-
-
-            <!--/stories-->
-
-
-
-            <div class="col-sm-12">
-              <div class="page-header text-muted divider">
-                Connect with Us
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-6">
-                <a href="#">Twitter</a> <small class="text-muted">|</small> <a href="#">Facebook</a> <small class="text-muted">|</small> <a href="#">Google+</a>
-              </div>
-            </div>
-
-            <hr>
-
-            <div class="row" id="footer">
-              <div class="col-sm-6">
-
-              </div>
-              <div class="col-sm-6">
-                <p>
-                <a href="#" class="pull-right">©Sports Hub Inc.</a>
-                </p>
-              </div>
-            </div>
-
-          <hr>
+<% @users.each do |user| %>
+  <%= link_to user.username, user_path(user) %>
+<% end %>
