retrieve tweets from the twitter api

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,4 @@
 
 <h1>Sports Hub</h1>
 
-<h4>Bloggers</h4>
-
-<% @users.each do |user| %>
-  <%= link_to user.username, user_path(user) %>
-<% end %>
+<%= @nba.text %>
