--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,21 @@
   <div class="navbar navbar-inverse">
     <div class="navbar-header">
 
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">SPORTS HUB</a>
     </div>
     <div class="navbar-collapse collapse navbar-inverse-collapse">
       <ul class="nav navbar-nav">
+        <li><%= link_to "Home", root_url %></li>
        <% if current_user %>
-          <li><%= link_to "Home", root_url %></li>
-            <li ><%= link_to "Sign Out", destroy_user_session_path %></li>
+            <li ><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+          </ul>
+            Logged in as <%= link_to current_user.username, user_path(current_user), class: "logged-in" %>
             <% else %>
           <li ><%= link_to "Create Account", new_user_registration_path %></li>
           <li ><%= link_to "Sign In", new_user_session_path %></li>
+          </ul>
           <% end %>
-        </ul>
-         Logged in as <%= link_to current_user.username, user_path(current_user), class: "logged-in" %>
+
 
     </div>
   </div>
